examples/negative/type_invariants/unbound_tyvar_in_signature.kai
# Issue #534 shape 4: a fn signature uses type variable `a` in
# the parameter and `b` in the return type, but `b` is never
# bound — it does not appear in any parameter type and has no
# explicit `[a, b]` introducer. Under HM convention the typer
# must reject this: the caller has nothing to constrain `b`,
# so the value silently masquerades as whatever the call site
# expects (the body actually returns the param of type `a`).
# ML/Haskell-family compilers reject as "unbound type variable".

fn f(x: a) : b = x

fn main() : Int = f(1)
